<resources>
    <string name="app_name">Yawmiat Alkora</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">معلومات عنا</string>
    <string name="registration">تسجيل رقمك للمزيد...</string>
    <string name="social">وسائل التواصل </string>
    <string name="tournaments">البطولات</string>
    <string name="latest_news">أخر الأخبار</string>
    <string name="date">المواعيد</string>
    <string name="image">image Desc</string>
    <string name="name">الاسم</string>
    <string name="phone">رقم التليفون</string>
    <string name="email">البريد الالكترونى</string>
    <string name="comment">تعليق</string>
    <string name="submit">ارسال</string>
    <string name="arrangement">ترتيب الجدول</string>
    <string name="points">نقط</string>
    <string name="goals">اهداف</string>
    <string name="h">ه</string>
    <string name="t">ت</string>
    <string name="f">ف</string>
    <string name="l">ل</string>
</resources>