<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.leagues.DetailsLeagueFragment">


        <include
            android:id="@+id/leagueToolbar"
            layout="@layout/snippet_top_leaguetoolbar" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/points"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/goals"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/h"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/t"
                        android:textColor="@color/black" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/f"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/l"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="3.5"
                        android:gravity="center|start"
                        android:text="@string/arrangement"
                        android:textColor="@color/black" />


                    <!--    <TextView android:layout_width="wrap_content"-->
                    <!--        android:layout_height="wrap_content"-->
                    <!--        android:layout_margin="@dimen/_8sdp"-->
                    <!--        android:textColor="@color/black"-->
                    <!--        android:text="اهداف"/>-->

                    <!--    <TextView android:layout_width="wrap_content"-->
                    <!--        android:layout_height="wrap_content"-->
                    <!--        android:layout_margin="@dimen/_8sdp"-->
                    <!--        android:textColor="@color/black"-->
                    <!--        android:text="ه"/>-->


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/league_rcVw"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/layout_item_details_league" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</layout>