<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_dark"
        android:orientation="vertical"
        tools:context=".presentation.register.RegisterFragment">


        <include
            android:id="@+id/registerToolbar"
            layout="@layout/snippet_top_registertoolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerToolbar">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/logo" />


                <EditText
                    android:id="@+id/et_name"
                    style="@style/customEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_white"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/colorGray" />


                <EditText
                    android:id="@+id/et_phone"
                    style="@style/customEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_white"
                    android:hint="@string/phone" />


                <EditText
                    android:id="@+id/et_email"
                    style="@style/customEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_white"
                    android:hint="@string/email"
                    android:textColorHint="@color/colorGray" />


                <EditText
                    android:id="@+id/et_comment"
                    style="@style/customEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_white"
                    android:hint="@string/comment"
                    android:inputType="textMultiLine"
                    android:textColorHint="@color/colorGray" />


                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_btn_bruble"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</layout>